# TJPCov

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  README.md  Untitled.ipynb  environment.yml  new_sacc.yml  pyproject.toml  pytest.ini  requirements.txt  run_tjpcov.py  run_tjpcov_cluster.py  run_tjpcov_mpi.sh  run_tjpcov_mpi.slurm  setup.py  test_output.txt
doc/: Makefile  README.md  Terms_of_Reference.md  requirements.txt
examples/: 3x2pt_cov_cosmology.yaml  API example.ipynb  CovarianceCalculator.ipynb  Gaussian_cov-DES.ipynb  Gaussian_cov.ipynb  README.md  cluster_count_covariance.ipynb  cluster_count_covariance.py  cluster_count_covariance_validation.ipynb  clusters-mpi.sh  example_Fourier_Gaussian_fsky.ipynb  example_Fourier_Gaussian_fsky_CMU.ipynb  full_3x2pt_cov_example.yml  full_3x2pt_cov_namaster_example.yml
tests/: README.md  Untitled.ipynb  cng_DESgc__0_DESgc__0_DESgc__0_DESgc__0.npz  conftest.py  cosmos_desy1.pkl  test_2.py  test_base.py  test_cluster_helpers.py  test_conf.py  test_conf_cs.py  test_conf_minimal.py  test_conf_minimal_cs.py  test_covariance_builder.py  test_covariance_calculator.py  test_covariance_cluster_counts.py  test_covariance_cluster_mass.py  test_covariance_clusters.py  test_covariance_fourier_base.py  test_covariance_fourier_cNG.py  test_covariance_fourier_cNG_fsky.py  test_covariance_fourier_gaussian_nmt.py  test_covariance_fourier_ssc.py  test_covariance_fourier_ssc_fsky.py  test_covariance_gaussian_fsky.py  test_covariance_io.py  test_covariance_real_base.py  test_mpi.py  test_nmt.py  test_nmt_tools.py  test_ssc.py  (+6 more)
(+214 files in other folders)
